/*
 * Copyright 2018 The Feast Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package feast.core;

import "feast/specs/ImportSpec.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_package = "feast.core";
option java_outer_classname = "JobServiceProto";
option go_package = "github.com/gojektech/feast/go-feast-proto/feast/core";

service JobService {
    // Submit a job to feast to run. Returns the job id.
    rpc SubmitJob (JobServiceTypes.SubmitImportJobRequest) returns (JobServiceTypes.SubmitImportJobResponse);

    // List all jobs submitted to feast.
    rpc ListJobs (google.protobuf.Empty) returns (JobServiceTypes.ListJobsResponse);

    // Get Job with ID
    rpc GetJob (JobServiceTypes.GetJobRequest) returns (JobServiceTypes.GetJobResponse);

    // Abort job with given ID
    rpc AbortJob(JobServiceTypes.AbortJobRequest) returns (JobServiceTypes.AbortJobResponse);
}

message JobServiceTypes {
    message SubmitImportJobRequest {
        feast.specs.ImportSpec importSpec = 1;
        string name = 2; // optional
    }

    message SubmitImportJobResponse {
        string jobId = 1;
    }

    message ListJobsResponse {
        repeated JobDetail jobs = 1;
    }

    message GetJobRequest {
        string id = 1;
    }

    message GetJobResponse {
        JobDetail job = 1;
    }

    message AbortJobRequest {
        string id = 1;
    }

    message AbortJobResponse {
        string id = 1;
    }

    // Expanded view of a given job. Returns job information, as well
    // as latest metrics.
    message JobDetail {
        string id = 1;
        string extId = 2;
        string type = 3;
        string runner = 4;
        string status = 5;
        repeated string entities = 6;
        repeated string features = 7;
        map<string,double> metrics = 8;
        google.protobuf.Timestamp lastUpdated = 9;
        google.protobuf.Timestamp created = 10;
    }
}
