//
// * Copyright 2019 The Feast Authors
// *
// * Licensed under the Apache License, Version 2.0 (the "License");
// * you may not use this file except in compliance with the License.
// * You may obtain a copy of the License at
// *
// *     https://www.apache.org/licenses/LICENSE-2.0
// *
// * Unless required by applicable law or agreed to in writing, software
// * distributed under the License is distributed on an "AS IS" BASIS,
// * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// * See the License for the specific language governing permissions and
// * limitations under the License.
//

syntax = "proto3";
package feast.core;

option java_package = "feast.core";
option java_outer_classname = "SourceProto";
option go_package = "github.com/gojek/feast/protos/generated/go/feast/core";


message Source {
  enum SourceType {
    INVALID = 0;
    KAFKA = 1;
  }

  // The kind of message source the import job should connect to
  // in order to retrieve FeatureRow value
  SourceType type = 1;

  // Optional. Configuration to establish connection to the message source.
  // The available options vary depending on the source type.
  //
  // For SourceType.KAFKA, the following key value options are accepted:
  // - bootstrapServers: [comma delimited value of host[:port]]
  // - topics: [comma delimited value of topic names. This value is provisioned by core and should not be set by the user.]
  // - consumerGroupId: [optional, consumer group id for the Kafka consumer in the import job. For import job to support propert checkpointing and resuming from a failed job, this value should be provided.]
  map<string, string> options = 2;
}